--- a/style.css
+++ b/style.css
@@ -1,39 +1,32 @@
-.circle {
-  float: left;
-  shape-outside: polygon(0 0, 0 100%, 300px 0px);
-  width: 50%;
-  height: 1000px;
+.wrapper { 
+  padding: 30px 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: column; 
+ }
+
+.title-name {
+  height: 400px;   
 }
 
-.circle2 {
-  float: right;
-  shape-outside: polygon(300px 0px, 300px 100%, 0 100%);
-  width: 50%;
-  height: 1000px;
+.seperator-line {
+  border-top: 1px solid #f4f4f4; 
 }
 
-.wrapper {
-  width: 100%;
-  max-width: 700px;
-  margin: 0 auto;
-}
-
-p {
+.previous-employers {
+  margin: 50px auto; 
+  max-width: 828px; 
+  font-size: 33px; 
+  text-transform: uppercase; 
+  line-height: 1;
   text-justify: justify;
-  width: 100%;
-  text-align: justify;
+	text-align: justify;
   text-justify: inter-word;
-  font-size: 15px;
-  line-height: 1.5;
-  background: linear-gradient(to bottom, #d38312, #a83279);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-family: "vidaloka";
+  color: #37474f; 
+  font-family: 'DubielPlain';
 }
 
-@media only screen and (max-width: 600px) {
-  .circle,
-  .circle2 {
-    display: none;
-  }
+.previous-employers span:hover {
+    box-shadow: inset 0 0px 0px 2px cyan;
+    cursor: pointer; 
 }
