--- a/style.css
+++ b/style.css
@@ -1,17 +1,29 @@
 .wrapper { 
-  padding: 30px 0;
+  padding: 0 0 30px 0;
   display: flex;
   justify-content: center;
   flex-direction: column; 
+  height: calc(94vh - 45px); 
  }
 
+ .header { 
+   height: 15px;
+   font-size: 12px; 
+   color: #37474f;
+   display: flex;
+   justify-content: center;
+   align-items: center; 
+  }
+
 .title-name {
-  height: 400px;   
+  height: 100%;
+  max-height: 400px;    
 }
 
 .seperator-line {
-  border-top: 1px solid #f4f4f4; 
+  border-top: 1px solid #f1efef; 
 }
+
 
 .previous-employers {
   margin: 50px auto; 
@@ -19,7 +31,6 @@
   font-size: 33px; 
   text-transform: uppercase; 
   line-height: 1;
-  text-justify: justify;
 	text-align: justify;
   text-justify: inter-word;
   color: #37474f; 
@@ -27,6 +38,33 @@
 }
 
 .previous-employers span:hover {
-    box-shadow: inset 0 0px 0px 2px cyan;
+    background-color: cyan;
     cursor: pointer; 
 }
+
+.footer {
+  height: 6vh; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px; 
+  color: #37474f;
+  background-color: #fff247; 
+}
+
+.footer div { 
+  padding: 1em;
+  transition: 200ms ease-out; 
+  position: relative;
+  top: -3px;
+  left: -3px;
+  text-shadow: 1px 1px #e2d632, 2px 2px #e2d632, 3px 3px #e2d632, 4px 4px #e2d632, 5px 5px #e2d632, 6px 6px #e2d632;
+  font-weight: bold; 
+  cursor: pointer; 
+ }
+
+.footer div + div {
+    margin-left: 30px; 
+}
+
+.footer div:hover { text-shadow: none; }
