--- a/style.css
+++ b/style.css
@@ -1,19 +1,30 @@
+a {
+  color: #0288D1;
+  transition: 100ms ease-out; 
+  text-decoration: none; 
+}
+
+a:hover { color: #0277BD;}
+
 .wrapper { 
-  padding: 0 0 30px 0;
+  padding: 0;
   display: flex;
   justify-content: center;
   flex-direction: column; 
-  height: calc(94vh - 45px); 
+  height: calc(94vh - 20px); 
  }
 
  .header { 
-   height: 15px;
-   font-size: 12px; 
-   color: #37474f;
+   height: 20px;
+   font-size: 11px; 
+   color: #90A4AE;
    display: flex;
    justify-content: center;
    align-items: center; 
-  }
+   border-bottom: 1px solid #f1efef; 
+}
+
+.header a { margin-left: 14px; }
 
 .title-name {
   height: 100%;
@@ -34,11 +45,12 @@
 	text-align: justify;
   text-justify: inter-word;
   color: #37474f; 
-  font-family: 'DubielPlain';
+  transition: 100ms ease-out; 
+  /*font-family: 'DubielPlain'; */
 }
 
 .previous-employers span:hover {
-    background-color: cyan;
+    background-color: #fff247;
     cursor: pointer; 
 }
 
