--- a/style.css
+++ b/style.css
@@ -1,10 +1,77 @@
+body {
+  background-color: #181818; 
+  max-width: 1440px;
+  margin: 0 auto;
+  padding-bottom: 100px;   
+}
+
 a {
-  color: #0288D1;
+  color: white;
+  opacity: .7;
   transition: 100ms ease-out; 
   text-decoration: none; 
 }
 
-a:hover { color: #0277BD;}
+a:hover { opacity: 1;}
+
+.home-header { padding: 2em 4em; }
+
+.header { 
+  font-size: 15px; 
+  color: white;
+  display: flex;
+  font-family: 'raleway'; 
+}
+
+.nav {
+  display: flex;
+  margin-left: 200px; 
+}
+
+.name { font-weight: 900; }
+
+.nav div + div { margin-left: 30px; }
+
+.intro {
+    font-size: 48px; 
+    display: flex;
+    justify-content: center;
+    height: 70vh;
+    color: white; 
+    flex-direction: column;
+}
+
+.last-updated {
+  font-size: 12px;
+  color: rgba(255, 255, 255, .7);
+  position: absolute;
+  bottom: -45px;
+  left: 0; 
+}
+
+.tagline {
+  font-family: 'raleway';
+  font-weight: 300; 
+  position: relative; 
+}
+
+.oddball {
+  background: linear-gradient(to bottom, var(--mainColor) 0%, var(--mainColor) 100%);
+	background-position: 0 100%;
+	background-repeat: repeat-x;
+	background-size: 3px 3px;
+  text-decoration: none;
+  transition: 100ms ease-out; 
+  cursor: default; 
+}
+
+.oddball:hover {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23ff9800' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
+  background-position: 0 100%;
+  background-size: auto 6px;
+  background-repeat: repeat-x;
+  text-decoration: none;
+}
 
 .wrapper { 
   padding: 0;
@@ -14,28 +81,6 @@ a:hover { color: #0277BD;}
   height: calc(94vh - 20px); 
  }
 
- .header { 
-   height: 20px;
-   font-size: 11px; 
-   color: #90A4AE;
-   display: flex;
-   justify-content: center;
-   align-items: center; 
-   border-bottom: 1px solid #f1efef; 
-}
-
-.header a { margin-left: 14px; }
-
-.title-name {
-  height: 100%;
-  max-height: 400px;    
-}
-
-.seperator-line {
-  border-top: 1px solid #f1efef; 
-}
-
-
 .previous-employers {
   margin: 50px auto; 
   max-width: 828px; 
@@ -44,39 +89,91 @@ a:hover { color: #0277BD;}
   line-height: 1;
 	text-align: justify;
   text-justify: inter-word;
-  color: #37474f; 
+  color: white; 
   transition: 100ms ease-out; 
-  /*font-family: 'DubielPlain'; */
 }
 
 .previous-employers span:hover {
     background-color: #fff247;
-    cursor: pointer; 
+    cursor: default; 
 }
 
-.footer {
-  height: 6vh; 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 14px; 
-  color: #37474f;
-  background-color: #fff247; 
-}
 
-.footer div { 
-  padding: 1em;
-  transition: 200ms ease-out; 
+.box { 
   position: relative;
-  top: -3px;
-  left: -3px;
-  text-shadow: 1px 1px #e2d632, 2px 2px #e2d632, 3px 3px #e2d632, 4px 4px #e2d632, 5px 5px #e2d632, 6px 6px #e2d632;
-  font-weight: bold; 
-  cursor: pointer; 
- }
-
-.footer div + div {
-    margin-left: 30px; 
+  cursor: default;
 }
 
-.footer div:hover { text-shadow: none; }
+.glitch {
+  font-size: 62px;
+  line-height: 1;
+  font-family: 'raleway', sans-serif;
+  font-weight: 900;
+}
+
+@keyframes glitch-left {
+  0%  { transform: translate(0)}
+  33% { transform: translate(-5px, 3px) }
+  66% { transform: translate(5px, -3px) }
+  to  { transform: translate(0) }
+}
+
+@keyframes glitch-left-2 {
+  0%  { transform: translate(0) }
+  33% { transform: translate(-5px, -3px) }
+  66% { transform: translate(5px, 2px) }
+  to  { transform: translate(0) }
+}
+  
+  .glitch:before,
+  .glitch:after{
+    display: block;
+    content: 'James Williams';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    opacity: .8;
+  }
+
+  .glitch:after {
+    color: #f0f;
+    z-index: -2;
+  }
+
+  .glitch:before {
+    color: #0ff;
+    z-index: -1;
+  }
+
+  .glitch:hover:before { animation: glitch-left 1s cubic-bezier(.25, .46, .45, .94) both infinite }
+  .glitch:hover:after { animation: glitch-left-2 1s cubic-bezier(.25, .46, .45, .94) reverse both infinite }
+
+  /* about me */
+  .about-me-img {
+    max-width: 400px; 
+    opacity: .7; 
+    margin-right: 50px; 
+  }
+
+  .about-wrap {
+    margin-top: -100px;
+    padding: 0 4em; 
+    color: white; 
+    font-family: 'raleway'; 
+    font-size: 16px; 
+    display: flex;
+  }
+
+  .h2-intro {
+    font-size: 24px; 
+    font-weight: 300; 
+    line-height: 1.4; 
+  }
+
+  .p {
+    font-weight: 300;
+    line-height: 1.5; 
+    margin-top: 15px; 
+  }
