--- a/style.css
+++ b/style.css
@@ -53,18 +53,19 @@ a:hover { opacity: 1;}
 .nav div + div { margin-left: 30px; }
 
 .intro {
-    font-size: 48px; 
+    font-size: 25px; 
     display: flex;
     height: calc(100vh - 100px);
     color: white; 
     flex-direction: column;
-    padding-top: 125px; 
+    padding-top: 60px; 
 }
 
 @media (min-width: 600px) {
   .intro {
     height: 80vh;
     padding-top: 300px; 
+    font-size: 48px; 
   }
 }
 
@@ -80,6 +81,7 @@ a:hover { opacity: 1;}
   font-family: 'raleway';
   font-weight: 300; 
   position: relative; 
+  line-height: 1.3; 
 }
 
 .oddball {
@@ -129,10 +131,11 @@ a:hover { opacity: 1;}
 .box { 
   position: relative;
   cursor: default;
+  margin-bottom: 10px; 
 }
 
 .glitch {
-  font-size: 62px;
+  font-size: 54px; /* 62 */
   line-height: 1;
   font-family: 'raleway', sans-serif;
   font-weight: 900;
