--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 body {
   background-color: #181818; 
   max-width: 1440px;
-  margin: 0 auto;
-  padding-bottom: 100px;   
+  margin: 0 auto;  
 }
 
 a {
@@ -37,7 +36,7 @@ a:hover { opacity: 1;}
 
 .nav {
   display: flex; 
-  margin-top: 30px; 
+  margin-top: 15px; 
 }
 
 @media (min-width: 600px) {
@@ -53,12 +52,12 @@ a:hover { opacity: 1;}
 .nav div + div { margin-left: 30px; }
 
 .intro {
-    font-size: 25px; 
+    font-size: 24px; 
     display: flex;
-    height: calc(100vh - 100px);
+    height: calc(100vh - 130px);
     color: white; 
     flex-direction: column;
-    padding-top: 60px; 
+    padding-top: 80px; 
 }
 
 @media (min-width: 600px) {
@@ -182,35 +181,48 @@ a:hover { opacity: 1;}
 
   /* about me */
   .about-me-img {
-    max-width: 400px; 
+    max-width: 100%; 
     opacity: .7; 
     margin-right: 50px; 
   }
 
   .about-wrap {
-    margin-top: -100px;
-    padding: 0 4em; 
+    margin-top: -150px; 
     color: white; 
     font-family: 'raleway'; 
     font-size: 16px; 
     display: flex;
+    flex-direction: column;
+  }
+
+  @media (min-width: 600px) {
+    .about-wrap {
+      padding: 0 4em; 
+      flex-direction: row; 
+    }
   }
 
   .h2-intro {
     font-size: 24px; 
     font-weight: 300; 
     line-height: 1.4; 
+    padding: 24px; 
   }
 
   .p {
     font-weight: 300;
     line-height: 1.5; 
-    margin-top: 15px; 
+    margin-top: 15px;
+    padding: 0 24px;  
   }
 
 
 .social-wrap {
-  margin-top: 40px; 
+  margin-top: 80px; 
+}
+
+@media (min-width: 600px) {
+  .social-wrap { margin-top: 40px; }
 }
 
 .codepen,
@@ -241,4 +253,16 @@ a:hover { opacity: 1;}
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+.footer {
+  font-size: 12px; 
+  color: rgba(255,255,255,.6);
+  font-family: 'raleway';
+  padding: 2em; 
+  margin-top: 1em; 
+}
+
+@media (min-width: 600px) {
+  .footer { padding: 2em 64px; }
 }
