--- a/style.css
+++ b/style.css
@@ -18,10 +18,11 @@ a:hover { opacity: 1;}
 @media (min-width: 900px) { .home-header { padding: 2em 4em; }}
 
 .header { 
-  font-size: 16px; 
+  font-size: 18px; 
   color: white;
   display: flex;
-  font-family: 'raleway';
+  font-family: 'hind';
+  font-weight: 300; 
   flex-direction: column; 
   align-items: flex-end;
 }
@@ -29,7 +30,7 @@ a:hover { opacity: 1;}
 @media (min-width: 900px)  {
   .header {
     flex-direction: row;
-    font-size: 15px; 
+    font-size: 18px; 
     align-items: flex-start; 
   }
 }
@@ -52,19 +53,25 @@ a:hover { opacity: 1;}
 .nav div + div { margin-left: 30px; }
 
 .intro {
-    font-size: 24px; 
+    font-size: 46px; 
     display: flex;
-    height: calc(100vh - 200px);
     color: white; 
     flex-direction: column;
     padding-top: 80px; 
+    font-family: 'hind'; 
+    font-weight: 600; 
+    line-height: 1.4; 
 }
+
+.intro-secondary { margin-top: 250px; }
+
+.tagline { opacity: .6; }
 
 @media (min-width: 900px) {
   .intro {
-    height: calc(100vh - 390px);;
-    padding-top: 300px; 
-    font-size: 48px; 
+    padding-top: 290px; 
+    font-size: 140px; 
+    line-height: .9; 
   }
 }
 
@@ -73,32 +80,8 @@ a:hover { opacity: 1;}
   color: rgba(255, 255, 255, .7);
   position: absolute;
   bottom: -45px;
+  font-family: 'roboto mono';
   left: 0; 
-}
-
-.tagline {
-  font-family: 'raleway';
-  font-weight: 300; 
-  position: relative; 
-  line-height: 1.3; 
-}
-
-.oddball {
-  background: linear-gradient(to bottom, var(--mainColor) 0%, var(--mainColor) 100%);
-	background-position: 0 100%;
-	background-repeat: repeat-x;
-	background-size: 3px 3px;
-  text-decoration: none;
-  transition: 100ms ease-out; 
-  cursor: default; 
-}
-
-.oddball:hover {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23ff9800' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
-  background-position: 0 100%;
-  background-size: auto 6px;
-  background-repeat: repeat-x;
-  text-decoration: none;
 }
 
 .wrapper { 
@@ -109,70 +92,6 @@ a:hover { opacity: 1;}
   height: calc(94vh - 20px); 
  }
 
-.previous-employers {
-  margin: 50px auto; 
-  max-width: 828px; 
-  font-size: 33px; 
-  text-transform: uppercase; 
-  line-height: 1;
-	text-align: justify;
-  text-justify: inter-word;
-  color: white; 
-  transition: 100ms ease-out; 
-}
-
-.box { 
-  position: relative;
-  cursor: default;
-  margin-bottom: 10px; 
-}
-
-.glitch {
-  font-size: 54px; /* 62 */
-  line-height: 1;
-  font-family: 'raleway', sans-serif;
-  font-weight: 900;
-}
-
-@keyframes glitch-left {
-  0%  { transform: translate(0)}
-  33% { transform: translate(-5px, 3px) }
-  66% { transform: translate(5px, -3px) }
-  to  { transform: translate(0) }
-}
-
-@keyframes glitch-left-2 {
-  0%  { transform: translate(0) }
-  33% { transform: translate(-5px, -3px) }
-  66% { transform: translate(5px, 2px) }
-  to  { transform: translate(0) }
-}
-  
-  .glitch:before,
-  .glitch:after{
-    display: block;
-    content: 'James Williams';
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    opacity: .8;
-  }
-
-  .glitch:after {
-    color: #f0f;
-    z-index: -2;
-  }
-
-  .glitch:before {
-    color: #0ff;
-    z-index: -1;
-  }
-
-  .glitch:hover:before { animation: glitch-left 1s cubic-bezier(.25, .46, .45, .94) both infinite }
-  .glitch:hover:after { animation: glitch-left-2 1s cubic-bezier(.25, .46, .45, .94) reverse both infinite }
-
   /* about me */
   .about-me-img {
     max-width: 100%; 
@@ -180,13 +99,35 @@ a:hover { opacity: 1;}
     margin-right: 50px; 
   }
 
+  .about-me-intro {
+      font-size: 46px; 
+      display: flex;
+      color: white; 
+      flex-direction: column;
+      padding-top: 80px; 
+      font-family: 'hind'; 
+      font-weight: 600; 
+      line-height: 1.4; 
+      position: relative; 
+  }
+
+  .about-me-intro .tagline { opacity: 1; }
+
+  @media (min-width: 900px) {
+    .about-me-intro {
+      padding-top: 290px; 
+      font-size: 100px; 
+      line-height: .9; 
+    }
+  }
+
   .about-wrap {
-    margin-top: -150px; 
     color: white; 
-    font-family: 'raleway'; 
-    font-size: 16px; 
+    font-family: 'hind'; 
+    font-size: 20px; 
     display: flex;
     flex-direction: column;
+    margin-top: 200px; 
   }
 
   @media (min-width: 900px) {
@@ -197,7 +138,7 @@ a:hover { opacity: 1;}
   }
 
   .h2-intro {
-    font-size: 24px; 
+    font-size: 32px; 
     font-weight: 300; 
     line-height: 1.4; 
     padding: 24px; 
@@ -207,23 +148,25 @@ a:hover { opacity: 1;}
     font-weight: 300;
     line-height: 1.5; 
     margin-top: 15px;
-    padding: 0 24px;  
+    padding: 0 24px; 
   }
 
-
-.social-wrap {
-  margin-top: 80px; 
-}
-
-@media (min-width: 900px) {
-  .social-wrap { margin-top: 40px; }
-}
+  .header {
+    opacity: 0;
+    animation-name: slide-up;
+    animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+    animation-fill-mode: forwards;
+    animation-duration: 1s; 
+    animation-delay: .5s;
+  }
 
 .codepen,
 .spotify,
 .linkedin,
 .twitter,
-.github {
+.github,
+.intro,
+.about-me-intro {
   opacity: 0;
   animation-name: slide-up;
   animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -232,7 +175,9 @@ a:hover { opacity: 1;}
   animation-delay: .5s; 
 }
 .github { animation-delay: .6s; }
-.spotify { animation-delay: .7s; }
+.spotify,
+.intro,
+.about-me-intro{ animation-delay: .7s; }
 .linkedin { animation-delay: .8s; }
 .twitter { animation-delay: .9s; }
 
@@ -254,28 +199,42 @@ a:hover { opacity: 1;}
   color: rgba(255,255,255,.6);
   font-family: 'raleway';
   padding: 2em; 
-  margin-top: 1em; 
+  margin-top: 125px; 
 }
 
 @media (min-width: 900px) {
   .footer { padding: 2em 64px; }
 }
 
+.intro-secondary .feature h4 {
+  font-size: 36px; 
+  font-family: 'hind';
+  font-weight: 600; 
+  margin-top: 0;  
+  text-transform: unset; 
+}
+
 .intro-secondary h4 {
   color: white;
-  font-size: 20px;
-  font-family: 'raleway';
+  font-size: 24px;
+  font-family: 'hind';
   font-weight: 400; 
   text-transform: uppercase; 
+}
+
+@media (min-width: 900px) {
+  .intro-secondary .feature h4 {
+    font-size: 64px; 
+  }
 }
 
 .intro-secondary h4 span { opacity: .5; font-weight: 300;  }
 
 .responsibilities {
-  font-size: 15px;
+  font-size: 20px;
   line-height: 1.6;
   color: white;
-  font-family: 'raleway';
+  font-family: 'hind';
   font-weight: 300;
   margin-right: 50px; 
 }
@@ -284,9 +243,69 @@ a:hover { opacity: 1;}
   display: flex;
 }
 
-.work-history-item { 
-  width: 100%;
-  max-width: 500px; 
+.work-history-item + .work-history-item { margin-top: 100px; }
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 40px;
 }
 
-.work-history-item + .work-history-item { margin-top: 100px; }
+@media (min-width: 900px) {
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 1280px) {
+  .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.span-col-2 {grid-column: span 2 / auto; }
+
+
+.feature-image {
+  height: 300px;
+  border-radius: 4px; 
+  position: relative; 
+  overflow: hidden; 
+}
+
+.feature-info {
+  font-size: 12px;
+  font-family: 'roboto mono';
+  color: white;
+  text-transform: uppercase; 
+  opacity: .6; 
+  line-height: 1.5;
+}
+
+.feature-info-wrap {
+  display: flex;
+  justify-content: space-between; 
+}
+
+.grid-3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 40px;
+}
+
+.placeholder-image {
+  background-color:#00000040;
+  display: flex;
+  justify-content: center;
+  flex-direction: column; 
+  align-items: center;
+  text-transform: uppercase; 
+  height: 90vh; 
+  padding: 0 30px; 
+}
+
+.placeholder-image svg {
+  max-width: 500px;
+  width: 100%;
+}
+
