--- a/design-excercise.css
+++ b/design-excercise.css
@@ -40,11 +40,11 @@
     align-items: flex-end;
   }
 }
-.input-wrap + .input-wrap {
+.input-wrap {
   margin: 1rem 0 1rem;
 }
 @media (min-width: 600px) {
-  .input-wrap + .input-wrap {
+  .input-wrap {
     margin: 0 1rem 0 1rem;
   }
 }
@@ -336,9 +336,17 @@ input {
   box-sizing: border-box;
   margin-top: .3rem;
 }
+
+.location-note {
+    font-size: 13px;
+    color: white;
+    margin-top: 5rem;
+}
+
 input:hover {
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.18);
 }
+
 input:focus {
   box-shadow: 0 0 0 2pt #3b99fc;
 }
@@ -358,11 +366,11 @@ input:focus {
   white-space: nowrap;
 }
 .action-button:hover {
-  background-color: #048FCE;
+    background-color: #048FCE;
 }
 .action-button:focus {
-  box-shadow: 0 0 0 2pt #3b99fc;
-  background-color: #048FCE;
+    box-shadow: 0 0 0 2pt #3b99fc;
+    background-color: #048FCE;
 }
 .action-button:active {
   -webkit-transform: scale(0.93);
@@ -370,17 +378,16 @@ input:focus {
 }
 
 .categories-list {
-  -webkit-column-count: 5;
-          column-count: 5;
-  -webkit-column-width: 5rem;
-          column-width: 5rem;
-  list-style: none;
-  padding: 1rem 0;
+    display: flex;
+    flex-wrap: wrap; 
+    list-style: none;
+    padding: 1rem 0;
 }
 
 .categories-list-item {
   font-size: 13px;
   max-width: 175px;
+  margin: 1rem; 
 }
 .categories-list-item a {
   text-decoration: none;
@@ -403,14 +410,16 @@ input:focus {
   margin-top: 1rem;
 }
 
+.fa-map-marker-alt {
+    margin-right: .3rem;
+}
+
 a {
     color: #4A90E2;
     text-decoration: none; 
 }
 
-a:hover {
-    color: #1976D2;
-}
+a:hover { color: #1976D2; }
 
 body {
   margin-bottom: 5rem;
